update to move2, incl stadiamap

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 .Rhistory
 .RData
 .Ruserdata
-data/output
+.DS_Store
+data/output/**
+!data/output/.keep
 .cache/
 .config/
 .local/
 shiny_bookmarks/
+move1_files
