--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # development settings
-SOURCE_FILE=./data/raw/input2.rds
+SOURCE_FILE=./stevanError.rds
 OUTPUT_FILE=./data/output/output.rds
 ERROR_FILE=./data/output/error.log
 APP_ARTIFACTS_DIR=./data/output/
