--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 # development settings
-SOURCE_FILE=./data/raw/input1.rds
+CONFIGURATION_FILE=./app-configuration.json
+PRINT_CONFIGURATION=yes
+SOURCE_FILE=./data/raw/input4_move2loc_LatLon.rds
 OUTPUT_FILE=./data/output/output.rds
 ERROR_FILE=./data/output/error.log
 APP_ARTIFACTS_DIR=./data/output/
-LOCAL_APP_FILES_DIR=./data/local_app_files
+USER_APP_FILE_HOME_DIR=./data/auxiliary/user-files
 CLEAR_OUTPUT=yes
+# deprecated
+LOCAL_APP_FILES_DIR=./data/auxiliary/local-files
