--- a/appspec.json
+++ b/appspec.json
@@ -1,65 +1,21 @@
 {
+  "version": "1.2",
   "settings": [],
   "dependencies": {
     "R": [
-      {
-        "name": "move2"
-      },
-	       
-      {
-        "name": "ggmap"
-      },
-	        {
-        "name": "adehabitatHR"
-      },
-	        {
-        "name": "shiny"
-      },
-	  	        {
-        "name": "shinycssloaders"
-      },
-	        {
-        "name": "fields"
-      },
-	        {
-        "name": "scales"
-      },
-	        {
-        "name": "lubridate"
-      },
-	  	        {
-        "name": "shinyBS"
-      },	
-	  {
-        "name": "zip"
-      },
-      {
-        "name":"sf"
-      },
-      {
-        "name":"mapview"
-      },
-      {
-        "name":"pals"
-      },
-      {
-        "name":"leaflet"
-      },
-      {
-        "name":"leaflet.extras"
-      },
-      {
-        "name":"htmlwidgets"
-      },
-      {
-        "name":"dplyr"
-      },
-      {
-        "name":"webshot2"
-      },
-      {
-        "name":"chromote"
-      }
+      {"name": "move2"},
+	    {"name": "adehabitatHR"},
+	    {"name": "shiny"},
+	    {"name": "fields"},
+	    {"name": "shinyBS"},	
+	    {"name": "zip"},
+      {"name":"sf"},
+      {"name":"mapview"},
+      {"name":"pals"},
+      {"name":"leaflet"},
+      {"name":"leaflet.extras"},
+      {"name":"htmlwidgets"},
+      {"name":"dplyr"}
     ]
   },
   "createsArtifacts": true,
@@ -96,9 +52,16 @@
   "orcid": "0000-0002-3357-8533",
   "affiliation": "Max-Planck-Institute of Animal Behavior",
   "affiliationRor": "https://ror.org/026stee22"
+},
+{
+  "firstName": "Nafiseh",
+  "middleInitials": null,
+  "lastName": "Tavakol",
+  "email": "",
+  "roles": ["contributor"],
+  "orcid": "",
+  "affiliation": "",
+  "affiliationRor": ""
 }
-  ],
-  "documentation" : {
-    "url": "https://github.com/andreakoelzsch/Minimum-Convex-Polygon/blob/main/README.md"
-  }
+  ]
 }
